Fix redundant spacing in view mode when no food.

--- a/src/views/Slot.scss
+++ b/src/views/Slot.scss
@@ -8,9 +8,6 @@
   .app-edit &[data-id] {
     cursor: pointer;
   }
-  &.-group-end td {
-    border-bottom: 2px solid transparent;
-  }
   &.-group-end + & td {
     border-top-width: 4px;
     border-top-color: #ededed;
